New Feature: Service metadata (#77)
* Add service metadata endpoints

* New release 1.5.0-unstable (#70)


* Add chargebackBusinessUnit field; Remove k8sInfraRelease field (#74)

* Add chargebackBusinessUnit field; Remove k8sInfraRelease field

* Fix go deps

* go mod tidy

* Updated controller-gen version

* Fix go.sum imports

* Bump go version to 1.21

* Refactor deprecated clientConfig

* Refactor clientConfig webhook configuration

* Fix G304 (CWE-22)

* Add missing license

* Update makefile K8S_VERSION to 1.25.0

* Update controller-gen crd options

---------


* Add recommended helm labels (#71)

* Add recommended helm labels

* Increase chart version

* New release 1.4.2 (#75)


* Fix leader election (#76)


* Update kind version

* Add new crd & controller reconciliation logic

* Updated serviceMetadata patching logic

* make swagger

* Add chargebackBusinessUnit field; Remove k8sInfraRelease field (#74)

* Add chargebackBusinessUnit field; Remove k8sInfraRelease field

* Fix go deps

* go mod tidy

* Updated controller-gen version

* Fix go.sum imports

* Bump go version to 1.21

* Refactor deprecated clientConfig

* Refactor clientConfig webhook configuration

* Fix G304 (CWE-22)

* Add missing license

* Update makefile K8S_VERSION to 1.25.0

* Update controller-gen crd options

---------


* Update kind version

* Add new crd & controller reconciliation logic

* Updated serviceMetadata patching logic

* make swagger

* Add client config defaults

* Updated service metadata patching logic

* Ignore service object delete events

* Fix linting errors

* Add missing license

---------
