# pkg/api/config/v1/zz_generated.deepcopy.go
@@ -80,6 +80,7 @@ func (in *ClientConfig) DeepCopyInto(out *ClientConfig) {
 	out.TypeMeta = in.TypeMeta
 	in.ControllerManager.DeepCopyInto(&out.ControllerManager)
 	in.AlertmanagerWebhook.DeepCopyInto(&out.AlertmanagerWebhook)
+	in.ServiceMetadata.DeepCopyInto(&out.ServiceMetadata)
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ClientConfig.
@@ -248,6 +249,41 @@ func (in *ControllerWebhook) DeepCopy() *ControllerWebhook {
 		return nil
 	}
 	out := new(ControllerWebhook)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *ServiceMetadataConfig) DeepCopyInto(out *ServiceMetadataConfig) {
+	*out = *in
+	if in.WatchedGVKs != nil {
+		in, out := &in.WatchedGVKs, &out.WatchedGVKs
+		*out = make([]WatchedGVK, len(*in))
+		copy(*out, *in)
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ServiceMetadataConfig.
+func (in *ServiceMetadataConfig) DeepCopy() *ServiceMetadataConfig {
+	if in == nil {
+		return nil
+	}
+	out := new(ServiceMetadataConfig)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *WatchedGVK) DeepCopyInto(out *WatchedGVK) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new WatchedGVK.
+func (in *WatchedGVK) DeepCopy() *WatchedGVK {
+	if in == nil {
+		return nil
+	}
+	out := new(WatchedGVK)
 	in.DeepCopyInto(out)
 	return out
 }
