# pkg/api/registry/v1/cluster_types.go
@@ -116,6 +116,9 @@ type ClusterSpec struct {
 
 	// Capacity cluster information
 	Capacity Capacity `json:"capacity,omitempty"`
+
+	// ServiceMetadata service specific metadata
+	ServiceMetadata ServiceMetadata `json:"services,omitempty"`
 }
 
 // Offering the cluster is meant for
@@ -242,6 +245,12 @@ type Capacity struct {
 	ClusterCapacity     int    `json:"clusterCapacity"`
 	ClusterProvisioning int    `json:"clusterProvisioning"`
 }
+
+type ServiceMetadata map[string]ServiceMetadataItem
+
+type ServiceMetadataItem map[string]ServiceMetadataMap
+
+type ServiceMetadataMap map[string]string
 
 // ClusterStatus defines the observed state of Cluster
 type ClusterStatus struct {
