# pkg/apiserver/docs/swagger.yaml
@@ -138,6 +138,10 @@ definitions:
           Timestamp when cluster was registered in Cluster Registry
           +kubebuilder:validation:Required
         type: string
+      services:
+        allOf:
+        - $ref: '#/definitions/github_com_adobe_cluster-registry_pkg_api_registry_v1.ServiceMetadata'
+        description: ServiceMetadata service specific metadata
       shortName:
         description: |-
           Cluster name, without dash
@@ -231,6 +235,18 @@ definitions:
       ownerID:
         description: Cloud account of the owner
         type: string
+    type: object
+  github_com_adobe_cluster-registry_pkg_api_registry_v1.ServiceMetadata:
+    additionalProperties:
+      $ref: '#/definitions/github_com_adobe_cluster-registry_pkg_api_registry_v1.ServiceMetadataItem'
+    type: object
+  github_com_adobe_cluster-registry_pkg_api_registry_v1.ServiceMetadataItem:
+    additionalProperties:
+      $ref: '#/definitions/github_com_adobe_cluster-registry_pkg_api_registry_v1.ServiceMetadataMap'
+    type: object
+  github_com_adobe_cluster-registry_pkg_api_registry_v1.ServiceMetadataMap:
+    additionalProperties:
+      type: string
     type: object
   github_com_adobe_cluster-registry_pkg_api_registry_v1.Tier:
     properties:
@@ -351,7 +367,7 @@ definitions:
       offset:
         type: integer
     type: object
-host: http://127.0.0.1:8080
+host: 127.0.0.1:8080
 info:
   contact: {}
   description: Cluster Registry API
@@ -481,7 +497,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get an cluster. Auth is required
+      description: Get a cluster. Auth is required
       operationId: v2-get-cluster
       parameters:
       - description: Name of the cluster to get
@@ -506,7 +522,7 @@ paths:
             $ref: '#/definitions/github_com_adobe_cluster-registry_pkg_apiserver_errors.Error'
       security:
       - bearerAuth: []
-      summary: Get an cluster
+      summary: Get a cluster
       tags:
       - cluster
     patch:
@@ -546,6 +562,86 @@ paths:
       summary: Patch a cluster
       tags:
       - cluster
+  /v2/services/{serviceId}:
+    get:
+      consumes:
+      - application/json
+      description: List all metadata for a service for all clusters
+      operationId: v2-get-service-metadata
+      parameters:
+      - description: SNOW Service ID
+        in: path
+        name: serviceId
+        required: true
+        type: string
+      - collectionFormat: multi
+        description: Filter conditions
+        in: query
+        items:
+          type: string
+        name: conditions
+        type: array
+      - description: Offset to start pagination search results (default is 0)
+        in: query
+        name: offset
+        type: integer
+      - description: The number of results per page (default is 200)
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/pkg_apiserver_web_handler_v2.clusterList'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_adobe_cluster-registry_pkg_apiserver_errors.Error'
+      security:
+      - bearerAuth: []
+      summary: Get service metadata
+      tags:
+      - service
+  /v2/services/{serviceId}/cluster/{clusterName}:
+    get:
+      consumes:
+      - application/json
+      description: Get metadata for a service for a specific cluster
+      operationId: v2-get-service-metadata-for-cluster
+      parameters:
+      - description: SNOW Service ID
+        in: path
+        name: serviceId
+        required: true
+        type: string
+      - description: Name of the cluster
+        in: path
+        name: clusterName
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_adobe_cluster-registry_pkg_api_registry_v1.ClusterSpec'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_adobe_cluster-registry_pkg_apiserver_errors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_adobe_cluster-registry_pkg_apiserver_errors.Error'
+      security:
+      - bearerAuth: []
+      summary: Get service metadata for a specific cluster
+      tags:
+      - service
 produces:
 - application/json
 schemes:
